src/objects/Consignment__c.object
<CustomObject>
    <fields>
        <fullName>SFAccountId__c</fullName>
        <externalId>true</externalId>
        <label>SF Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>